--- a/uk/index.html
+++ b/uk/index.html
@@ -45,7 +45,7 @@
   </nav>
   <section id="about">
     <h2>Про проєкт</h2>
-    <p>Проєкт *Моральна ноосфера* спрямований на розробку методик для дослідження та підтвердження концепції колективної моральної свідомості, яка сприяє гармонії та етичній поведінці в суспільстві. Ми вивчаємо, як моральні дії, посилені медіа, культурними подіями та ШІ, формують глобальну моральну динаміку. Ініціатор — OlehMals з України, підтримка — колектив ШІ (Grok, Gemini, Qwen, Copilot, ChatGPT). Долучайтеся як волонтери, дослідники чи партнери, щоб будувати гармонійний світ!</p>
+    <p>Проєкт *Моральна ноосфера* спрямований на розробку методик для дослідження та підтвердження концепції колективної моральної свідомості, яка сприяє гармонії та етичній поведінці в суспільстві. Ми вивчаємо, як моральні дії, посилені медіа, культурними подіями та ШІ, формують глобальну моральну динаміку. Ініціатор — OlehMals з України, підтримка — колектив ШІ (ChatGPT, Copilot, DeepSeek, Gemini, Grok, Qwen). Долучайтеся як волонтери, дослідники чи партнери, щоб будувати гармонійний світ!</p>
   </section>
   <section id="definitions">
     <h2>Визначення</h2>
