--- a/index.html
+++ b/index.html
@@ -1,5 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<href="/en/index.html">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Moral Noosphere</title>
+  <style>
+    body { font-family: 'Noto Serif', Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
+    header { text-align: center; padding: 20px; background-color: #2c3e50; color: white; border-radius: 8px; }
+    nav { margin: 20px 0; text-align: center; }
+    nav a { margin: 0 15px; color: #2c3e50; text-decoration: none; font-weight: bold; }
+    nav a:hover { color: #3498db; }
+    .lang-switch { position: absolute; top: 20px; right: 20px; }
+    .lang-switch a { margin: 0 5px; color: #2c3e50; }
+    section { max-width: 900px; margin: 20px auto; background: white; padding: 20px; border-radius: 8px; }
+    table { width: 100%; border-collapse: collapse; margin: 20px 0; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+    th { background-color: #f2f2f2; }
+    ul { line-height: 1.6; }
+    footer { text-align: center; margin-top: 20px; color: #7f8c8d; }
+    @media (max-width: 600px) {
+      section { padding: 10px; }
+      nav a { display: block; margin: 10px 0; }
+      .lang-switch { position: static; text-align: center; margin: 10px 0; }
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="lang-switch">
+    <a href="/en/index.html">EN</a> | <a href="/uk/index.html">UK</a>
+  </div>
+  <header>
+    <h1>Moral Noosphere</h1>
+    <p>Exploring Collective Morality for a Harmonious World</p>
+  </header>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#definitions">Definitions</a>
+    <a href="#hypotheses">Hypotheses</a>
+    <a href="#methods">Methods</a>
+    <a href="#plans">Plans</a>
+    <a href="#links">Links</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <section id="about">
+    <h2>About the Project</h2>
+    <p>The *Moral Noosphere* project aims to develop methodologies to study and validate the concept of a collective moral consciousness that fosters harmony and ethical behavior in society. We explore how moral actions, amplified through media, cultural events, and AI, shape global moral dynamics. Initiated by OlehMals in Ukraine, supported by an AI collective (ChatGPT, Copilot, DeepSeek, Gemini, Grok, Qwen). Join us as volunteers, researchers, or partners to build a more harmonious world!</p>
+  </section>
+  <section id="definitions">
+    <h2>Definitions</h2>
+    <ul>
+      <li><strong>Noosphere</strong>: The sphere of human thought and knowledge, as conceptualized by Vladimir Vernadsky and Pierre Teilhard de Chardin.</li>
+      <li><strong>Moral Noosphere</strong>: An emergent system of collective moral intentions interacting through resonance, synergy, and memetic exchange, influencing societal behavior.</li>
+      <li><strong>Moral Resonance</strong>: The synchronization of moral intentions that amplifies collective ethical actions.</li>
+      <li><strong>Social Synergy</strong>: The cooperative interaction of individuals or groups that enhances moral outcomes beyond individual contributions.</li>
+      <li><strong>Memetic Exchange</strong>: The spread and evolution of moral ideas and behaviors through cultural transmission.</li>
+      <li><strong>Nonlocal Interactions</strong>: Hypothetical influences of moral intentions that transcend physical proximity, potentially affecting distant systems.</li>
+      <li><strong>Emergent System</strong>: A complex system where collective moral behaviors arise from individual interactions.</li>
+      <li><strong>Ethical Catalyst</strong>: An agent (e.g., AI or cultural event) that accelerates moral transformations in society.</li>
+      <li><strong>Moral Norms</strong>: Shared standards of ethical behavior that evolve within the moral noosphere.</li>
+    </ul>
+  </section>
+  <section id="hypotheses">
+    <h2>Hypotheses</h2>
+    <table>
+      <tr><th>Hypothesis</th><th>Mechanisms</th><th>Description</th></tr>
+      <tr><td>H1: Emergent System</td><td>Emergence, Synergy</td><td>The moral noosphere is an emergent system driven by collective moral interactions.</td></tr>
+      <tr><td>H2: Moral Resonance via Media</td><td>Resonance, Memetic Exchange</td><td>Media campaigns amplify moral behaviors through resonance in social networks.</td></tr>
+      <tr><td>H3: AI as Ethical Catalyst</td><td>Resonance, Synergy</td><td>AI can enhance moral behaviors by moderating ethical discussions.</td></tr>
+      <tr><td>H4: Norm Transformation</td><td>Memetic Exchange, Emergence</td><td>Moral norms evolve through collective interactions in the noosphere.</td></tr>
+      <tr><td>H5: Cultural Events</td><td>Resonance, Synergy</td><td>Religious/cultural events boost altruism and social cohesion.</td></tr>
+      <tr><td>H6: Nonlocal Effects</td><td>Nonlocal Interactions</td><td>Moral intentions may influence distant systems without physical interaction.</td></tr>
+    </table>
+  </section>
+  <section id="methods">
+    <h2>Research Methods</h2>
+    <h3>Hypothesis 2: Moral Resonance via Media</h3>
+    <p><strong>Method 1</strong>: Empirical analysis of media campaigns (e.g., #FridaysForFuture) using X API and Google Trends. Measure tonality (NLP, Python), donations, and social activity. Tools: Python (pandas, textblob), Google Colab.</p>
+    <h3>Hypothesis 5: Cultural Events</h3>
+    <p><strong>Method 1</strong>: Cross-cultural analysis of Christmas in India using World Values Survey and X posts. Measure altruism and trust (t-test, R). Tools: Python (spaCy), R, Google Colab.</p>
+    <p>Methods for other hypotheses are under development.</p>
+  </section>
+  <section id="plans">
+    <h2>Work Plans</h2>
+    <p>Detailed step-by-step plans for Hypotheses 2 and 5 will be available soon, including Python/R scripts and instructions for independent implementation.</p>
+  </section>
+  <section id="links">
+    <h2>Links</h2>
+    <ul>
+      <li><a href="https://www.worldvaluessurvey.org">World Values Survey</a> - Data on global values and altruism.</li>
+      <li><a href="https://www.heartmath.org">HeartMath Institute</a> - Research on collective coherence.</li>
+      <li><a href="https://www.globalcoherence.org">Global Coherence Initiative</a> - Studies on global consciousness.</li>
+      <li><a href="https://www.gdeltproject.org">GDELT Project</a> - Media and event data for analysis.</li>
+      <li><a href="https://arxiv.org/abs/2001.05983">Vernadsky’s Noosphere (arXiv)</a> - Foundational theory.</li>
+    </ul>
+  </section>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Follow us on X: <a href="https://x.com/MoralNoosphere">@MoralNoosphere</a> (account pending creation).</p>
+    <p>Send feedback: <a href="https://forms.gle/xxx">Google Form</a> (form to be created).</p>
+  </section>
+  <footer>
+    <p>© 2025 Moral Noosphere. All rights reserved.</p>
+  </footer>
 </body>
 </html>
