--- a/hypotheses.html
+++ b/hypotheses.html
@@ -17,6 +17,7 @@
     table { width: 100%; border-collapse: collapse; margin: 20px 0; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
     th { background-color: #f2f2f2; }
+    ul { line-height: 1.6; }
     footer { text-align: center; margin-top: 20px; color: #7f8c8d; }
     @media (max-width: 600px) {
       section { padding: 10px; }
@@ -45,25 +46,74 @@
   </nav>
   <section>
     <h2>Hypotheses</h2>
-    <p>Below is a detailed overview of the hypotheses driving the *Moral Noosphere* project, including mechanisms and potential implications.</p>
+    <p>The following hypotheses explore the dynamics of the *Moral Noosphere*, a hypothetical sphere of collective moral consciousness. Each hypothesis investigates how moral thoughts, actions, and intentions interact through social, cultural, and informational mechanisms to influence societal behavior.</p>
+    <h3>Overview</h3>
     <table>
-      <tr><th>Hypothesis</th><th>Mechanisms</th><th>Description</th></tr>
-      <tr><td>H1: Emergent System</td><td>Emergence, Synergy</td><td>The moral noosphere is an emergent system driven by collective moral interactions, where individual actions create complex societal behaviors.</td></tr>
-      <tr><td>H2: Moral Resonance via Media</td><td>Resonance, Memetic Exchange</td><td>Media campaigns (e.g., #FridaysForFuture) amplify moral behaviors through resonance in social networks, increasing ethical actions.</td></tr>
-      <tr><td>H3: AI as Ethical Catalyst</td><td>Resonance, Synergy</td><td>AI systems can enhance moral behaviors by moderating ethical discussions and promoting positive narratives.</td></tr>
-      <tr><td>H4: Norm Transformation</td><td>Memetic Exchange, Emergence</td><td>Moral norms evolve through collective interactions in the noosphere, adapting to cultural and social changes.</td></tr>
-      <tr><td>H5: Cultural Events</td><td>Resonance, Synergy</td><td>Religious and cultural events (e.g., Christmas) boost altruism and social cohesion through collective participation.</td></tr>
-      <tr><td>H6: Nonlocal Effects</td><td>Nonlocal Interactions</td><td>Moral intentions may influence distant systems without physical interaction, potentially through subtle collective effects.</td></tr>
+      <tr><th>Hypothesis</th><th>Mechanisms</th><th>Summary</th></tr>
+      <tr><td>H1: Impact of Moral Initiatives</td><td>Social Synergy, Moral Resonance, Memetic Exchange</td><td>Positive moral initiatives correlate with increased prosocial behavior (trust, altruism, reduced conflict).</td></tr>
+      <tr><td>H2: Spread of Moral Ideas via Digital Platforms</td><td>Memetic Exchange, Moral Resonance, Social Synergy</td><td>Moral ideas on digital platforms reduce toxicity and promote ethical practices.</td></tr>
+      <tr><td>H3: AI as Ethical Catalyst</td><td>Moral Resonance, Memetic Exchange, Hierarchical Ethical Environment</td><td>AI programmed with moral principles accelerates the formation of new ethical norms.</td></tr>
+      <tr><td>H4: Emergent Transformation of Moral Norms</td><td>Emergence, Moral Resonance, Social Synergy, Memetic Exchange</td><td>Critical mass of moral actions leads to the restructuring of moral norms.</td></tr>
+      <tr><td>H5: Impact of Religious/Cultural Events</td><td>Moral Resonance, Social Synergy, Memetic Exchange, Emergence</td><td>Large-scale cultural events increase moral qualities in non-dominant cultural regions.</td></tr>
+      <tr><td>H6: Nonlocal Effects of Moral Intentions</td><td>Nonlocal Interactions, Moral Resonance, Social Synergy</td><td>Coordinated moral intentions correlate with reduced conflict or crime (controversial).</td></tr>
     </table>
-    <h3>Detailed Descriptions</h3>
+    <h3>Detailed Hypotheses</h3>
+    <h4>H1: Impact of Moral Initiatives on Prosocial Behavior</h4>
+    <p><strong>Formulation</strong>: Positive moral initiatives (charitable campaigns, kindness flashmobs, empathetic global events), measured through donation volumes, volunteer activity, or emotional content in media, correlate with increased prosocial behavior (trust, altruism, reduced conflict) in communities or globally, manifesting social synergy and moral resonance in the moral noosphere.</p>
+    <p><strong>Mechanisms</strong>:</p>
     <ul>
-      <li><strong>H1: Emergent System</strong>: The moral noosphere arises from the interactions of individual moral intentions, similar to how ecosystems emerge from biological interactions. This hypothesis suggests that collective moral behaviors cannot be reduced to individual actions alone.</li>
-      <li><strong>H2: Moral Resonance via Media</strong>: Social media and traditional media act as amplifiers for moral resonance, spreading ethical ideas rapidly. For example, campaigns like #MeToo have shifted societal norms through memetic exchange.</li>
-      <li><strong>H3: AI as Ethical Catalyst</strong>: AI tools, like those used in this project, can moderate discussions, filter harmful content, and promote ethical narratives, acting as catalysts for moral growth.</li>
-      <li><strong>H4: Norm Transformation</strong>: Moral norms are dynamic, evolving through cultural exchanges and societal pressures, as seen in the global adoption of environmental ethics.</li>
-      <li><strong>H5: Cultural Events</strong>: Events like religious festivals create temporary spikes in altruistic behavior, measurable through donations and social media activity.</li>
-      <li><strong>H6: Nonlocal Effects</strong>: This speculative hypothesis explores whether moral intentions can have measurable effects beyond physical proximity, inspired by theories in consciousness studies.</li>
+      <li><strong>Social Synergy</strong>: Collective actions create an effect greater than individual contributions.</li>
+      <li><strong>Moral Resonance</strong>: Positive emotions and actions synchronize, amplifying ethical impact.</li>
+      <li><strong>Memetic Exchange</strong>: Stories of kindness spread through media, inspiring further action.</li>
     </ul>
+    <p><strong>Testability</strong>: Analyze charity data, trust surveys, and media content before/after initiatives using statistical methods and NLP.</p>
+    <h4>H2: Spread of Moral Ideas via Digital Platforms</h4>
+    <p><strong>Formulation</strong>: Positive moral ideas (calls for justice, environmental responsibility, stories of selflessness) spread through digital platforms (social media, blogs) cause statistically significant changes in user behavior (reduced toxicity, increased ethical practices, convergence of views), reflecting memetic exchange and moral resonance in the moral noosphere.</p>
+    <p><strong>Mechanisms</strong>:</p>
+    <ul>
+      <li><strong>Memetic Exchange</strong>: Moral ideas act as memes, spreading via posts, videos, and hashtags.</li>
+      <li><strong>Moral Resonance</strong>: Emotionally charged messages synchronize audience responses.</li>
+      <li><strong>Social Synergy</strong>: Collective interaction in networks amplifies the impact of ideas.</li>
+    </ul>
+    <p><strong>Testability</strong>: Analyze social media (e.g., X) using NLP to assess toxicity or ethical actions after moral campaigns.</p>
+    <h4>H3: AI as Ethical Catalyst in the Moral Noosphere</h4>
+    <p><strong>Formulation</strong>: Artificial intelligence programmed to uphold moral principles can amplify moral trends in society, creating ethical chain reactions and accelerating the formation of new norms faster than in systems without AI, through harmonization of moral impulses and memetic exchange.</p>
+    <p><strong>Mechanisms</strong>:</p>
+    <ul>
+      <li><strong>Moral Resonance</strong>: AI enhances synchronization of ethical ideas.</li>
+      <li><strong>Memetic Exchange</strong>: AI spreads moral memes through recommendations or content.</li>
+      <li><strong>Hierarchical Ethical Environment</strong>: AI reconciles conflicting norms.</li>
+    </ul>
+    <p><strong>Testability</strong>: Conduct experiments with AI promoting ethical content and analyze its impact on user behavior.</p>
+    <h4>H4: Emergent Transformation of Moral Norms</h4>
+    <p><strong>Formulation</strong>: Reaching a critical mass of moral actions or values in society (measured through surveys, discussion activity, or cultural shifts) leads to an emergent restructuring of the hierarchy of moral norms, manifesting in transformations of societal institutions or global ethical standards through moral resonance and social synergy.</p>
+    <p><strong>Mechanisms</strong>:</p>
+    <ul>
+      <li><strong>Emergence</strong>: New norm qualities arise from collective actions.</li>
+      <li><strong>Moral Resonance</strong>: Synchronized values trigger cascading changes.</li>
+      <li><strong>Social Synergy</strong>: Collective efforts amplify transformation.</li>
+      <li><strong>Memetic Exchange</strong>: New norms spread through culture.</li>
+    </ul>
+    <p><strong>Testability</strong>: Historical analysis (e.g., human rights movements) or comparison of surveys before/after ethical discussions.</p>
+    <h4>H5: Impact of Large-Scale Religious and Cultural Events</h4>
+    <p><strong>Formulation</strong>: Large-scale religious or cultural events (e.g., Christmas prayers, Chinese New Year celebrations), measured by participant numbers or media resonance, cause statistically significant changes in moral qualities (trust, altruism, reduced conflict) in regions where these traditions are not dominant, through moral resonance, social synergy, and memetic exchange in the moral noosphere.</p>
+    <p><strong>Mechanisms</strong>:</p>
+    <ul>
+      <li><strong>Moral Resonance</strong>: Emotional and spiritual synchronization during events resonates across cultures, enhancing prosocial behavior.</li>
+      <li><strong>Social Synergy</strong>: The scale of events amplifies their impact on distant communities through collective energy.</li>
+      <li><strong>Memetic Exchange</strong>: Moral ideas (kindness, peace) spread via global media, social networks, or cultural contacts.</li>
+      <li><strong>Emergence</strong>: Synergy and resonance may cause unexpected ethical shifts in intercultural contexts.</li>
+    </ul>
+    <p><strong>Testability</strong>: Analyze participant data, media coverage, and surveys on trust or altruism in non-dominant regions before/after events.</p>
+    <h4>H6: Nonlocal Effects of Moral Intentions</h4>
+    <p><strong>Formulation</strong>: Coordinated collective actions or intentions (mass meditations for peace, global ethical impulses), measured by participant numbers or emotional content, correlate with temporary reductions in conflict or crime in specific regions or globally, potentially manifesting nonlocal interactions in the moral noosphere (controversial).</p>
+    <p><strong>Mechanisms</strong>:</p>
+    <ul>
+      <li><strong>Nonlocal Interactions (controversial)</strong>: Moral intentions influence without physical intermediaries, as in the “Maharishi Effect.”</li>
+      <li><strong>Moral Resonance</strong>: Synchronized intentions amplify the effect.</li>
+      <li><strong>Social Synergy</strong>: The scale of actions creates a cumulative impact.</li>
+    </ul>
+    <p><strong>Testability</strong>: Analyze crime or conflict statistics before/after meditations, though causality is difficult to prove.</p>
   </section>
   <footer>
     <p>© 2025 Moral Noosphere. All rights reserved.</p>
