--- a/uk/hypotheses.html
+++ b/uk/hypotheses.html
@@ -17,6 +17,7 @@
     table { width: 100%; border-collapse: collapse; margin: 20px 0; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
     th { background-color: #f2f2f2; }
+    ul { line-height: 1.6; }
     footer { text-align: center; margin-top: 20px; color: #7f8c8d; }
     @media (max-width: 600px) {
       section { padding: 10px; }
@@ -45,25 +46,75 @@
   </nav>
   <section>
     <h2>Гіпотези</h2>
-    <p>Нижче наведено детальний огляд гіпотез, що лежать в основі проєкту *Моральна ноосфера*, включаючи механізми та потенційні наслідки.</p>
+    <p>Наведені нижче гіпотези досліджують динаміку *Моральної ноосфери* — гіпотетичної сфери колективної моральної свідомості. Кожна гіпотеза аналізує, як моральні думки, дії та наміри взаємодіють через соціальні, культурні та інформаційні механізми, впливаючи на поведінку суспільства.</p>
+    <h3>Огляд</h3>
     <table>
-      <tr><th>Гіпотеза</th><th>Механізми</th><th>Опис</th></tr>
-      <tr><td>Г1: Емерджентна система</td><td>Емерджентність, Синергія</td><td>Моральна ноосфера — емерджентна система, керована колективними моральними взаємодіями, де індивідуальні дії створюють складну поведінку.</td></tr>
-      <tr><td>Г2: Моральний резонанс через медіа</td><td>Резонанс, Меметичний обмін</td><td>Медійні кампанії (наприклад, #FridaysForFuture) посилюють моральну поведінку через резонанс у соціальних мережах.</td></tr>
-      <tr><td>Г3: ШІ як етичний каталізатор</td><td>Резонанс, Синергія</td><td>Системи ШІ можуть покращувати моральну поведінку, модеруючи етичні дискусії та просуваючи позитивні наративи.</td></tr>
-      <tr><td>Г4: Трансформація норм</td><td>Меметичний обмін, Емерджентність</td><td>Моральні норми еволюціонують через колективні взаємодії, адаптуючись до культурних змін.</td></tr>
-      <tr><td>Г5: Культурні події</td><td>Резонанс, Синергія</td><td>Релігійні та культурні події (наприклад, Різдво) підвищують альтруїзм і соціальну згуртованість.</td></tr>
-      <tr><td>Г6: Нелокальні ефекти</td><td>Нелокальні взаємодії</td><td>Моральні наміри можуть впливати на віддалені системи без фізичної взаємодії.</td></tr>
+      <tr><th>Гіпотеза</th><th>Механізми</th><th>Короткий опис</th></tr>
+      <tr><td>Г1: Вплив моральних ініціатив</td><td>Соціальна синергія, Моральний резонанс, Меметичний обмін</td><td>Моральні ініціативи підвищують просоціальну поведінку (довіру, альтруїзм, зниження конфліктів).</td></tr>
+      <tr><td>Г2: Поширення моральних ідей</td><td>Меметичний обмін, Моральний резонанс, Соціальна синергія</td><td>Моральні ідеї в цифрі знижують токсичність і сприяють етичним практикам.</td></tr>
+      <tr><td>Г3: ШІ як етичний каталізатор</td><td>Моральний резонанс, Меметичний обмін, Ієрархізоване етичне середовище</td><td>ШІ прискорює формування нових етичних норм.</td></tr>
+      <tr><td>Г4: Емерджентна трансформація норм</td><td>Емерджентність, Моральний резонанс, Соціальна синергія, Меметичний обмін</td><td>Критична маса дій перебудовує ієрархію норм.</td></tr>
+      <tr><td>Г5: Вплив релігійних/культурних подій</td><td>Моральний резонанс, Соціальна синергія, Меметичний обмін, Емерджентність</td><td>Культурні події підвищують моральні якості в інших регіонах.</td></tr>
+      <tr><td>Г6: Н****
+елокальні ефекти</td><td>Нелокальні взаємодії, Моральний резонанс, Соціальна синергія</td><td>Моральні наміри знижують конфлікти чи злочинність (спірно).</td></tr>
     </table>
-    <h3>Детальний опис</h3>
+    <h3>Детальний опис гіпотез</h3>
+    <h4>Г1: Вплив моральних ініціатив на просоціальну поведінку</h4>
+    <p><strong>Формулювання</strong>: Позитивні моральні ініціативи (благодійні кампанії, флешмоби доброти, емпатичні глобальні події), виміряні через обсяг пожертв, волонтерську активність чи емоційний контент у медіа, корелюють із підвищенням просоціальної поведінки (довіра, альтруїзм, зниження конфліктності) у громадах чи глобально, що є проявом соціальної синергії та морального резонансу в моральній ноосфері.</p>
+    <p><strong>Механізми</strong>:</p>
     <ul>
-      <li><strong>Г1: Емерджентна система</strong>: Моральна ноосфера виникає з взаємодій індивідуальних моральних намірів, подібно до екосистем. Колективна поведінка не зводиться до окремих дій.</li>
-      <li><strong>Г2: Моральний резонанс через медіа</strong>: Соціальні та традиційні медіа підсилюють моральний резонанс, швидко поширюючи етичні ідеї, як у кампанії #MeToo.</li>
-      <li><strong>Г3: ШІ як етичний каталізатор</strong>: ШІ, як у цьому проєкті, модерує дискусії, фільтрує шкідливий контент і просуває етичні наративи.</li>
-      <li><strong>Г4: Трансформація норм</strong>: Моральні норми динамічні, еволюціонують через культурні обміни, як у глобальному прийнятті екологічної етики.</li>
-      <li><strong>Г5: Культурні події</strong>: Фестивалі створюють сплески альтруїзму, які можна виміряти через пожертви та активність у соцмережах.</li>
-      <li><strong>Г6: Нелокальні ефекти</strong>: Ця гіпотеза досліджує, чи можуть моральні наміри мати вимірювані ефекти на відстані, спираючись на теорії свідомості.</li>
+      <li><strong>Соціальна синергія</strong>: Колективні дії створюють ефект, що перевищує індивідуальні внески.</li>
+      <li><strong>Моральний резонанс</strong>: Позитивні емоції та дії синхронізуються, посилюючи етичний вплив.</li>
+      <li><strong>Меметичний обмін</strong>: Історії про доброту поширюються через медіа.</li>
     </ul>
+    <p><strong>Перевіряємість</strong>: Аналіз даних про благодійність, опитування довіри, контент-аналіз медіа до/після ініціатив.</p>
+    <h4>Г2: Поширення моральних ідей через цифрові платформи</h4>
+    <p><strong>Формулювання</strong>: Позитивні моральні ідеї (заклики до справедливості, екологічної відповідальності, історії самовідданості), поширені через цифрові платформи (соцмережі, блоги), викликають статистично значущі зміни в поведінці користувачів (зниження токсичності, зростання етичних практик, конвергенція поглядів), що відображає меметичний обмін і моральний резонанс у моральній ноосфері.</p>
+    <p><strong>Механізми</strong>:</p>
+    <ul>
+      <li><strong>Меметичний обмін</strong>: Моральні ідеї діють як меми, поширюючись через пости, відео, хештеги.</li>
+      <li><strong>Моральний резонанс</strong>: Емоційно заряджені повідомлення синхронізують реакції аудиторії.</li>
+      <li><strong>Соціальна синергія</strong>: Колективна взаємодія в мережах підсилює вплив ідей.</li>
+    </ul>
+    <p><strong>Перевіряємість</strong>: Аналіз соціальних мереж (наприклад, X) за допомогою NLP для оцінки токсичності чи етичних дій після моральних кампаній.</p>
+    <h4>Г3: ШІ як етичний каталізатор у моральній ноосфері</h4>
+    <p><strong>Формулювання</strong>: Штучний інтелект, запрограмований на підтримку моральних принципів, може посилювати моральні тенденції в суспільстві, створюючи етичні ланцюги реакцій і сприяючи формуванню нових норм швидше, ніж у системі без ШІ, через гармонізацію моральних імпульсів і меметичний обмін.</p>
+    <p><strong>Механізми</strong>:</p>
+    <ul>
+      <li><strong>Моральний резонанс</strong>: ШІ підсилює синхронізацію етичних ідей.</li>
+      <li><strong>Меметичний обмін</strong>: ШІ поширює моральні меми через рекомендації чи контент.</li>
+      <li><strong>Ієрархізоване етичне середовище</strong>: ШІ узгоджує суперечливі норми.</li>
+    </ul>
+    <p><strong>Перевіряємість</strong>: Експерименти з ШІ, що просувають етичний контент, і аналіз їхнього впливу на поведінку користувачів.</p>
+    <h4>Г4: Емерджентна трансформація моральних норм</h4>
+    <p><strong>Формулювання</strong>: Досягнення критичної маси моральних дій чи цінностей у суспільстві (виміряної через опитування, активність у дискусіях чи культурні зміни) призводить до емерджентної перебудови ієрархії моральних норм, що проявляється в трансформації суспільних інститутів чи глобальних етичних стандартів через моральний резонанс і соціальну синергію.</p>
+    <p><strong>Механізми</strong>:</p>
+    <ul>
+      <li><strong>Емерджентність</strong>: Нова якість норм виникає з колективних дій.</li>
+      <li><strong>Моральний резонанс</strong>: Синхронізація цінностей викликає лавиноподібні зміни.</li>
+      <li><strong>Соціальна синергія</strong>: Колективні зусилля підсилюють трансформацію.</li>
+      <li><strong>Меметичний обмін</strong>: Нові норми поширюються через культуру.</li>
+    </ul>
+    <p><strong>Перевіряємість</strong>: Історичний аналіз (наприклад, рух за права людини) чи порівняння опитувань до/після етичних дискусій.</p>
+    <h4>Г5: Вплив масштабних релігійних і культурних подій</h4>
+    <p><strong>Формулювання</strong>: Масштабні релігійні чи культурні події (наприклад, спільні молитви на Різдво, святкування Китайського Нового року), виміряні через кількість учасників або медійний резонанс, викликають статистично значущі зміни в моральних якостях (довіра, альтруїзм, зниження конфліктності) у регіонах, де ці традиції не є домінуючими, через моральний резонанс, соціальну синергію та меметичний обмін у моральній ноосфері.</p>
+    <p><strong>Механізми</strong>:</p>
+    <ul>
+      <li><strong>Моральний резонанс</strong>: Емоційна та духовна синхронізація під час подій резонує в інших культурах, підвищуючи просоціальну поведінку.</li>
+      <li><strong>Соціальна синергія</strong>: Масштабність подій підсилює їхній вплив на віддалені громади через колективну енергію.</li>
+      <li><strong>Меметичний обмін</strong>: Моральні ідеї (доброта, мир) поширюються через глобальні медіа, соцмережі чи культурні контакти.</li>
+      <li><strong>Емерджентність</strong>: Синергія та резонанс можуть викликати несподівані етичні зміни в міжкультурному контексті.</li>
+    </ul>
+    <p><strong>Перевіряємість</strong>: Аналіз даних про учасників, медійного покриття та опитувань щодо довіри чи альтруїзму в недомінуючих регіонах до/після подій.</p>
+    <h4>Г6: Нелокальні ефекти моральних намірів</h4>
+    <p><strong>Формулювання</strong>: Координовані колективні дії чи наміри (масові медитації за мир, глобальні етичні імпульси), виміряні через кількість учасників чи емоційний контент, корелюють із тимчасовим зниженням конфліктів чи злочинності в певних регіонах чи глобально, що може бути проявом нелокальних взаємодій у моральній ноосфері (спірно).</p>
+    <p><strong>Механізми</strong>:</p>
+    <ul>
+      <li><strong>Нелокальні взаємодії (спірно)</strong>: Моральні наміри впливають без фізичних посередників, як в «Ефекті Магаріші».</li>
+      <li><strong>Моральний резонанс</strong>: Синхронізація намірів посилює ефект.</li>
+      <li><strong>Соціальна синергія</strong>: Масштабність дій створює кумулятивний вплив.</li>
+    </ul>
+    <p><strong>Перевіряємість</strong>: Аналіз статистики злочинності чи конфліктів до/після медитацій, хоча причинність складно довести.</p>
   </section>
   <footer>
     <p>© 2025 Моральна Ноосфера. Усі права захищено.</p>
