--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <h3>Our Mission</h3>
     <p>We seek to investigate how individual and collective moral actions interact to create a hierarchical ethical environment, influencing societal norms and behaviors. By studying hypotheses such as the impact of moral initiatives, digital platforms, and cultural events, we aim to provide evidence-based insights into building a more harmonious world.</p>
     <h3>Role of AI</h3>
-    <p>The project is supported by a collaborative effort of advanced AI systems, including ChatGPT, Copilot, DeepSeek, Gemini, Grok (created by xAI), and Qwen. These AI tools assist in synthesizing hypotheses, analyzing data, and refining the project's conceptual framework, acting as ethical catalysts in the moral noosphere.</p>
+    <p>The project is supported by a collaborative effort of advanced AI systems, including ChatGPT, Copilot, DeepSeek, Gemini, Grok, Qwen. These AI tools assist in synthesizing hypotheses, analyzing data, and refining the project's conceptual framework, acting as ethical catalysts in the moral noosphere.</p>
     <h3>Context and Vision</h3>
     <p>Initiated in Ukraine amidst ongoing challenges, *Moral Noosphere* reflects a commitment to fostering global ethical progress. Our vision is to create a platform for researchers, thinkers, and communities to collaborate on understanding and enhancing collective morality, ultimately contributing to a more just and compassionate world.</p>
   </section>
