--- a/uk/about.html
+++ b/uk/about.html
@@ -47,7 +47,7 @@
     <h3>Наша місія</h3>
     <p>Ми прагнемо дослідити, як індивідуальні та колективні моральні дії взаємодіють, створюючи ієрархізоване етичне середовище, що впливає на суспільні норми та поведінку. Вивчаючи гіпотези, такі як вплив моральних ініціатив, цифрових платформ і культурних подій, ми хочемо надати науково обґрунтовані висновки для побудови гармонійного світу.</p>
     <h3>Роль ШІ</h3>
-    <p>Проєкт підтримується спільними зусиллями передових систем ШІ, зокрема ChatGPT, Copilot, DeepSeek, Gemini, Grok (створений xAI) та Qwen. Ці ШІ допомагають синтезувати гіпотези, аналізувати дані та уточнювати концептуальну базу проєкту, діючи як етичні каталізатори в моральній ноосфері.</p>
+    <p>Проєкт підтримується спільними зусиллями передових систем ШІ, зокрема ChatGPT, Copilot, DeepSeek, Gemini, Grok та Qwen. Ці ШІ допомагають синтезувати гіпотези, аналізувати дані та уточнювати концептуальну базу проєкту, діючи як етичні каталізатори в моральній ноосфері.</p>
     <h3>Контекст і бачення</h3>
     <p>Започаткований в Україні в умовах складних обставин, *Моральна ноосфера* відображає прагнення сприяти глобальному етичному прогресу. Наше бачення — створити платформу для співпраці дослідників, мислителів і громад, щоб зрозуміти та посилити колективну мораль, сприяючи справедливішому та співчутливішому світу.</p>
   </section>
