--- a/uk/hypotheses.html
+++ b/uk/hypotheses.html
@@ -55,8 +55,7 @@
       <tr><td>Г3: ШІ як етичний каталізатор</td><td>Моральний резонанс, Меметичний обмін, Ієрархізоване етичне середовище</td><td>ШІ прискорює формування нових етичних норм.</td></tr>
       <tr><td>Г4: Емерджентна трансформація норм</td><td>Емерджентність, Моральний резонанс, Соціальна синергія, Меметичний обмін</td><td>Критична маса дій перебудовує ієрархію норм.</td></tr>
       <tr><td>Г5: Вплив релігійних/культурних подій</td><td>Моральний резонанс, Соціальна синергія, Меметичний обмін, Емерджентність</td><td>Культурні події підвищують моральні якості в інших регіонах.</td></tr>
-      <tr><td>Г6: Н****
-елокальні ефекти</td><td>Нелокальні взаємодії, Моральний резонанс, Соціальна синергія</td><td>Моральні наміри знижують конфлікти чи злочинність (спірно).</td></tr>
+      <tr><td>Г6: Нелокальні ефекти</td><td>Нелокальні взаємодії, Моральний резонанс, Соціальна синергія</td><td>Моральні наміри знижують конфлікти чи злочинність (спірно).</td></tr>
     </table>
     <h3>Детальний опис гіпотез</h3>
     <h4>Г1: Вплив моральних ініціатив на просоціальну поведінку</h4>
