--- a/uk/index.html
+++ b/uk/index.html
@@ -32,13 +32,13 @@
     <p>Дослідження колективної моралі для гармонійного світу</p>
   </header>
   <nav>
-    <a href="uk/about.html">Про проєкт</a>
-    <a href="uk/definitions.html">Визначення</a>
-    <a href="uk/hypotheses.html">Гіпотези</a>
-    <a href="uk/methods.html">Методи</a>
-    <a href="uk/plans.html">Плани</a>
-    <a href="uk/links.html">Посилання</a>
-    <a href="uk/contact.html">Контакти</a>
+    <a href="../uk/about.html">Про проєкт</a>
+    <a href="../uk/definitions.html">Визначення</a>
+    <a href="../uk/hypotheses.html">Гіпотези</a>
+    <a href="../uk/methods.html">Методи</a>
+    <a href="../uk/plans.html">Плани</a>
+    <a href="../uk/links.html">Посилання</a>
+    <a href="../uk/contact.html">Контакти</a>
   </nav>
   <section>
     <h2>Ласкаво просимо</h2>
