--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <p>We welcome researchers, volunteers, and community members to connect with the *Moral Noosphere* project. Reach out for collaboration, questions, or suggestions via email or the form below. Follow us on X for updates.</p>
     <h3>Contact Information</h3>
     <ul>
-      <li><strong>Email</strong>: <a href="mailto:contact@moralnoosphere.org">contact@moralnoosphere.org</a></li>
+<!--      <li><strong>Email</strong>: <a href="mailto:contact@moralnoosphere.org">contact@moralnoosphere.org</a></li>  -->
       <li><strong>Form</strong>: <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-6EAAm156JXRdqIOce5EbDfTu9IGlDHKGb7hC-IiEuT1JKw/viewform?usp=sharing&ouid=118109011940726497204">[Submit a Message]</a> (Use this form for structured inquiries)</li>
       <li><strong>X</strong>: <a href="https://x.com/MoralNoosphere">@MoralNoosphere</a> (Follow for project updates)</li>
     </ul>
