--- a/uk/contact.html
+++ b/uk/contact.html
@@ -47,7 +47,7 @@
     <p>Запрошуємо дослідників, волонтерів і спільноту зв’язатися з проєктом *Моральна ноосфера*. Пишіть нам для співпраці, питань чи пропозицій через email або форму нижче. Слідкуйте за оновленнями в X.</p>
     <h3>Контактна інформація</h3>
     <ul>
-      <li><strong>Email</strong>: <a href="mailto:contact@moralnoosphere.org">contact@moralnoosphere.org</a></li>
+<!--            <li><strong>Email</strong>: <a href="mailto:contact@moralnoosphere.org">contact@moralnoosphere.org</a></li>  -->
       <li><strong>Форма</strong>: <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-6EAAm156JXRdqIOce5EbDfTu9IGlDHKGb7hC-IiEuT1JKw/viewform?usp=sharing&ouid=118109011940726497204">[Надіслати повідомлення]</a> (Використовуйте форму для структурованих запитів)</li>
       <li><strong>X</strong>: <a href="https://x.com/MoralNoosphere">@MoralNoosphere</a> (Слідкуйте за оновленнями проєкту)</li>
     </ul>
